Enhance code